@@ -1,0 +1,20 @@
+<?php
+class ezxajax_roleeditInfo
+{
+    static function info()
+    {
+        return array(
+            'Name' => "<a href='http://projects.ez.no/ezxajax_roleedit'>ezxajax_roleedit</a>",
+            'Version' => "0.2",
+            'Copyright' => "Copyright (C) 2006 SCK-CEN",
+            'Author' => "Kristof Coomans",
+            'License' => "GNU General Public License",
+            'Depends on the following third-party software' => array( 'Name' => 'xajax',
+                                                                      'Version' => '0.5 beta',
+                                                                      'License' => 'GNU Lesser General Public License',
+                                                                      'More information' => 'http://www.xajaxproject.org/'
+                                                                     )
+        );
+    }
+}
+?>
