@@ -5,3 +5,4 @@
 0.2
 - renameing to ezxajax_roleedit
 - update for use in ez4 / remove php5 strict warnings
+- adding ezinfo.php
